<resources>
    <string name="app_name">MySHAS Mobile App</string>
    <string name="Message">Face Unlock</string>
    <string name="button_send">Send</string>
    <string name="label_BD">Bedroom</string>
    <string name="label_BA">Bathroom</string>
    <string name="label_LR">Living Room</string>
    <string name="label_FD">Front Door</string>
    <string name="button_sensors">View Sensor Data</string>
    <string name="button_actuators">View Actuator Data</string>
    <string name="button_command">Command Center</string>
    <string name="button_home">Home</string>
    <string name="logo_desc">MySHAS Logo</string>
    <string name="application_title">MySHAS App</string>
    <string name="AC_Title">Area Controllers</string>
    <string name="SensID">Sensor ID</string>
    <string name="SensTY">Sensor Type</string>
    <string name="SensVL">Sensor Value</string>
    <string name="tempstring">#</string>
    <string name="command_center_title">MySHAS Command Center</string>
    <string name="capture_button">Capture to Unlock</string>

    <string-array name="FD_CC">
        <item>Open</item>
        <item>Close</item>
        <!--Depending on blinds
        <item>Quarter</item>
        <item>Half</item>
        <item>3/4</item>-->
    </string-array>

    <string-array name="BR_CC">
        <item>Open</item>
        <item>Close</item>
        <!--Depending on blinds
        <item>Quarter</item>
        <item>Half</item>
        <item>3/4</item>-->
    </string-array>

    <string-array name="LR_CC">
        <item>Open</item>
        <item>Close</item>
        <!--Depending on blinds
        <item>Quarter</item>
        <item>Half</item>
        <item>3/4</item>-->
    </string-array>

    <string-array name="Bath_CC">
        <item>Open</item>
        <item>Close</item>
        <!--Depending on blinds
        <item>Quarter</item>
        <item>Half</item>
        <item>3/4</item>-->
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
